--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
   <div class="form-controller">
-    <h1>Criar novo Livro</h1>
+    <h3 class="text-center">Criar novo Livro</h3>
     <div class="form-input-material">
       <%= form.label :title %>
       <%= form.text_field :title %>
@@ -32,7 +32,7 @@
       <%= form.label :description %>
       <%= form.text_area :description %>
     </div>
-    <button type="submit" class="btn btn-primary btn-ghost"><%= form.submit %></button>
+    <button type="submit" class="form-input-material"><%= form.submit %></button>
   </div>
 <% end %>
 
