--- a/app/views/colega_tradutors/_form.html.erb
+++ b/app/views/colega_tradutors/_form.html.erb
@@ -11,6 +11,7 @@
     </div>
   <% end %>
   <div class="form-controller">
+    <h3 class="text-center">Criar colega tradutor</h3>
     <div class="form-input-material">
       <%= form.label :name, style: "display: block" %>
       <%= form.text_field :name %>
