--- a/app/views/conversa_passadas/_form.html.erb
+++ b/app/views/conversa_passadas/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
   <div class="form-controller">
-    <h1>Criar nova conversa</h1>
+    <h3 class="text-center">Criar nova conversa</h3>
 
     <div class="form-input-material">
       <%= form.label :title, style: "display: block" %>
