--- a/app/assets/stylesheets/components/navbar/navbar.scss
+++ b/app/assets/stylesheets/components/navbar/navbar.scss
@@ -1,3 +1,10 @@
+.control-navbar{
+  .sft-logo{
+    img{
+      width: 60px;
+    }
+  }
+}
 .navbar-brand{
     width: 100%;
     background-image: url(https://i.postimg.cc/8CCr3wxy/lineimar.png);
@@ -5,7 +12,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     height: 54px;
-    margin-left: 10vw;
+    margin-left: 5vw;
 }
 
 .navbar-nav{
