--- a/app/views/components/carrousel/_carrousel_partners.html.erb
+++ b/app/views/components/carrousel/_carrousel_partners.html.erb
@@ -1,6 +1,5 @@
 <div class="container">
-    <h1 class="text-center mb-5 carousel-title">Il's m'font confience</h1>
-    <div class="row control-partners mb-5">
+    <div class="row control-partners">
         <img src="https://static.wixstatic.com/media/df0a98_2e6518e663924dd2b0734f08a6c94983~mv2.jpg" alt="..." class="control-img-size">
         <img src="https://static.wixstatic.com/media/df0a98_3a96b614e9e849baa35c0afba48bbaa4~mv2.png" alt="..." class="control-img-size">
         <img src="https://static.wixstatic.com/media/df0a98_0e940d035456434f92e2781d16976f3a~mv2.jpg" alt="..." class="control-img-size">
