--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,32 +1,23 @@
 <%= render partial: 'home/jobs', format: :erb %>
-<div class="container-fluid bg-light top-description-home mt-5">
+<div class="container-fluid top-description-home mt-5">
     <div class="row w-100 d-flex justify-content-center">
-        <div class="col-sm-6 border p-0 colum-desc-control">
-            <div class="text-member">
-                <h3 class="">Membre de la société française des traducteur</h3>
-                <div class="col-sm-3">
-                    <a href="https://www.sft.fr/fr/homepage" target="_blank">
-                        <img src="https://imgs.search.brave.com/is0LtQoLC-F35jJOo0betXfHAcASTqwosKYZW7E9wJs/rs:fit:350:305:1/g:ce/aHR0cHM6Ly9hbS10/cmFkdWN0aW9uLmNv/bS93cC1jb250ZW50/L3VwbG9hZHMvMjAx/OC8xMS9TRlQtcGFz/dGlsbGUtbWVtYnJl/X0dfc2YucG5n" alt="..." class="rounded-circle">
-                    </a>
-                </div>
-            </div>
+        <div class="col-sm-7 border p-0 colum-desc-control">
             <div class="home-description">
                 <%= @text_home.home_main_text %>
             </div>
         </div>
     </div>
 </div>
-<hr class="agaerre">
-<div class="section-carousel-books">
-    <h1 class="text-center my-books">Meus livros</h1>
-    <%= render partial: 'components/book/book', format: :erb %>
+<%= render partial: 'home/animation-lang', format: :erb %>
+<div class="container translation-description-home mt-5">
+    <div class="row w-100 row-translation">
+        <div class="col-sm-2  p-0 ">Frances to Portugues <br> Frances to Ingles</div>
+        <div class="col-sm-2  lang-br p-0 ">Portugues to Frances</div>
+        <div class="col-sm-2  p-0 ">Ingles to Fances <br> Ingles to Portugues </div>
+        <div class="col-sm-2  p-0 ">Espanhol to Francês <br> Espanhol to Português</div>
+    </div>
 </div>
-<br>
-<br>
-<hr>
-<div class="separate-partners">
-    <%= render partial: 'components/carrousel/carrousel_partners', format: :erb %>
-</div>
+
 <div class="separate-footer">
     <%= render partial: 'components/footer/footer', format: :erb %>
 </div>
