--- a/app/assets/stylesheets/components/navbar/navbar.scss
+++ b/app/assets/stylesheets/components/navbar/navbar.scss
@@ -1,82 +1,93 @@
-.control-navbar{
-  .sft-logo{
-    img{
+.control-navbar {
+  .sft-logo {
+    img {
       width: 60px;
     }
   }
 }
-.navbar-brand{
-    width: 100%;
-    background-image: url(https://i.postimg.cc/8CCr3wxy/lineimar.png);
-    content: "";
-    background-repeat: no-repeat;
-    background-size: contain;
-    height: 54px;
-    margin-left: 5vw;
+.navbar-brand {
+  width: 100%;
+  background-image: url(https://i.postimg.cc/8CCr3wxy/lineimar.png);
+  content: "";
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 54px;
+  margin-left: 5vw;
 }
 
-.navbar-nav{
+.navbar-nav {
   width: 100%;
   justify-content: flex-end;
-  .nav-item{
+  .nav-item {
     width: 150px;
     font-weight: bold;
     text-align: center;
     margin-right: 50px;
 
-    .nav-link{
+    .nav-link {
       background-image: url("https://i.postimg.cc/2SpScbSb/lineimar-bg.png");
       background-repeat: no-repeat;
       background-size: cover;
       text-align: center;
-      background-position-y: 5px;
     }
   }
 }
-
-
+.btn:focus {
+  outline: none;
+  box-shadow: none;
+}
+.button-links {
+  background-image: url("https://i.postimg.cc/2SpScbSb/lineimar-bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  background-position-y: 5px;
+  color: rgba(0, 0, 0, 0.5);
+  font-weight: bold;
+  outline: none;
+}
 
 .contactButton {
-    background: #fbdbbb;
-    color: rgba(0, 0, 0, 0.5);
-    font-family: inherit;
-    padding: 0.45em;
-    padding-left: 1.0em;
-    font-size: 17px;
-    font-weight: bold;
-    border-radius: 0.9em;
-    border: none;
-    letter-spacing: 0.05em;
-    display: flex;
-    align-items: center;
-    box-shadow: inset 0 0 1.6em -0.6em #fbdbbb81;
-    overflow: hidden;
-    position: relative;
-    height: 1.9em;
-    padding-right: 3em;
-    outline: none !important;
-  }
+  background: #fbdbbb;
+  color: rgba(0, 0, 0, 0.5);
+  font-family: inherit;
+  padding: 0.45em;
+  padding-left: 1em;
+  font-size: 17px;
+  font-weight: bold;
+  border-radius: 0.9em;
+  border: none;
+  letter-spacing: 0.05em;
+  display: flex;
+  align-items: center;
+  box-shadow: inset 0 0 1.6em -0.6em #fbdbbb81;
+  overflow: hidden;
+  position: relative;
+  height: 1.9em;
+  padding-right: 3em;
+  outline: none !important;
+}
 
-  .iconButton {
-    margin-left: 1em;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 2.2em;
-    width: 2.2em;
-    border-radius: 0.7em;
-    box-shadow: 0.1em 0.1em 0.6em 0.2em #fbdbbb;
-    right: 0.3em;
-    transition: all 0.3s;
-  }
+.iconButton {
+  margin-left: 1em;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 2.2em;
+  width: 2.2em;
+  border-radius: 0.7em;
+  box-shadow: 0.1em 0.1em 0.6em 0.2em #fbdbbb;
+  right: 0.3em;
+  transition: all 0.3s;
+}
 
-  .contactButton:hover {
-    transform: translate(-0.05em, -0.05em);
-    box-shadow: 0.15em 0.15em #fbdbbbc2;
-  }
+.contactButton:hover {
+  transform: translate(-0.05em, -0.05em);
+  box-shadow: 0.15em 0.15em #fbdbbbc2;
+}
 
-  .contactButton:active {
-    transform: translate(0.05em, 0.05em);
-    box-shadow: 0.05em 0.05em #fbdbbbbd;
-  }
+.contactButton:active {
+  transform: translate(0.05em, 0.05em);
+  box-shadow: 0.05em 0.05em #fbdbbbbd;
+}
