--- a/app/views/components/navbar/_navbar.html.erb
+++ b/app/views/components/navbar/_navbar.html.erb
@@ -1,43 +1,73 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light control-navbar">
   <a href="https://www.sft.fr/fr/homepage" target="_blank" class="sft-logo">
-    <img src="https://imgs.search.brave.com/is0LtQoLC-F35jJOo0betXfHAcASTqwosKYZW7E9wJs/rs:fit:350:305:1/g:ce/aHR0cHM6Ly9hbS10/cmFkdWN0aW9uLmNv/bS93cC1jb250ZW50/L3VwbG9hZHMvMjAx/OC8xMS9TRlQtcGFz/dGlsbGUtbWVtYnJl/X0dfc2YucG5n" alt="..." class="rounded-circle">
+    <img
+      src="https://imgs.search.brave.com/is0LtQoLC-F35jJOo0betXfHAcASTqwosKYZW7E9wJs/rs:fit:350:305:1/g:ce/aHR0cHM6Ly9hbS10/cmFkdWN0aW9uLmNv/bS93cC1jb250ZW50/L3VwbG9hZHMvMjAx/OC8xMS9TRlQtcGFz/dGlsbGUtbWVtYnJl/X0dfc2YucG5n"
+      alt="..."
+      class="rounded-circle"
+    />
   </a>
   <a class="navbar-brand" href="#"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item ">
+      <li class="nav-item">
         <%= link_to "Accueil", root_path, class: "nav-link" %>
       </li>
+      <div class="dropdown nav-item">
+        <button
+          class="btn button-links dropdown-toggle"
+          type="button"
+          id="dropdownMenuButton"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          Links externos
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <% if !@link_externos.nil? %>
+            <% @link_externos.each do |link| %>
+              <a class="dropdown-item" href="<%= link.url_page %>" target="_blank"
+                ><%= link.title %></a
+              >
+            <% end %>
+          <% else %>
+            <p>Sem links no momento</p>
+          <% end %>
+        </div>
+      </div>
       <li class="nav-item">
-        <a class="nav-link" href="#">Liens externes</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Blog</a>
+        <%= link_to 'Blog', blog_index_path, class:"nav-link"%>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contact</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Achat de livres</a>
+        <a class="nav-link" href="#">Livros</a>
       </li>
 
       <% if !user_signed_in? %>
 
-        <li class="">
-          <%= link_to '.', new_user_session_path%>
-        </li>
+      <li class=""><%= link_to '.', new_user_session_path%></li>
       <% else %>
-        <li class="nav-item">
-          <%= link_to "Log out", destroy_user_session_path, :method => :delete , class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'ADM', user_index_path, class:"nav-link" %>
-        </li>
+      <li class="nav-item">
+        <%= link_to "Log out", destroy_user_session_path, :method => :delete ,
+        class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'ADM', user_index_path, class:"nav-link" %>
+      </li>
       <% end %>
-
     </ul>
   </div>
 </nav>
