--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,23 +1,22 @@
 <%= render partial: 'home/jobs', format: :erb %>
 <div class="container-fluid top-description-home mt-5">
-    <div class="row w-100 d-flex justify-content-center">
-        <div class="col-sm-7 border p-0 colum-desc-control">
-            <div class="home-description">
-                <%= @text_home.home_main_text %>
-            </div>
-        </div>
+  <div class="row w-100 d-flex justify-content-center">
+    <div class="col-sm-7 border p-0 colum-desc-control">
+      <p class="ml-3 mt-3 text-center quemSouEu">Quem sou eu?</p>
+      <div class="home-description"><%= @text_home.home_main_text %></div>
     </div>
+  </div>
 </div>
 <%= render partial: 'home/animation-lang', format: :erb %>
 <div class="container translation-description-home mt-5">
-    <div class="row w-100 row-translation">
-        <div class="col-sm-2  p-0 ">Frances to Portugues <br> Frances to Ingles</div>
-        <div class="col-sm-2  lang-br p-0 ">Portugues to Frances</div>
-        <div class="col-sm-2  p-0 ">Ingles to Fances <br> Ingles to Portugues </div>
-        <div class="col-sm-2  p-0 ">Espanhol to Francês <br> Espanhol to Português</div>
+  <div class="row w-100 row-translation">
+    <div class="col-sm-4 d-flex">
+      <div class="col-sm-6 p-0 mini-fr"></div>
+      <div class="col-sm-6 p-0 mini-br"></div>
     </div>
+  </div>
 </div>
 
 <div class="separate-footer">
-    <%= render partial: 'components/footer/footer', format: :erb %>
+  <%= render partial: 'components/footer/footer', format: :erb %>
 </div>
