Sending changes in the home page, add more info to user

--- a/app/assets/stylesheets/components/navbar/navbar.scss
+++ b/app/assets/stylesheets/components/navbar/navbar.scss
@@ -1,13 +1,6 @@
-.control-navbar {
-  .sft-logo {
-    img {
-      width: 60px;
-    }
-  }
-}
 .navbar-brand {
   width: 100%;
-  background-image: url(https://i.postimg.cc/8CCr3wxy/lineimar.png);
+  background-image: url("https://i.postimg.cc/8CCr3wxy/lineimar.png");
   content: "";
   background-repeat: no-repeat;
   background-size: contain;
