--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -25,6 +25,21 @@
         <p>
           <%= f.text_area :home_main_text, placeholder:"Text da tela inicial" %>
         </p>
+        <p>
+          <%= f.text_area :service1, placeholder:"Text for servies 1" %>
+        </p>
+        <p>
+          <%= f.text_area :service2, placeholder:"Text for servies 2" %>
+        </p>
+        <p>
+          <%= f.text_area :service3, placeholder:"Text for servies 3" %>
+        </p>
+        <p>
+          <%= f.text_area :service4, placeholder:"Text for servies 4" %>
+        </p>
+        <p>
+          <%= f.text_area :member, placeholder:"Text for member" %>
+        </p>
       </div>
     </div>
     <div class="btn-update-user">
