--- a/app/assets/stylesheets/components/carrousel_home/carrousel.scss
+++ b/app/assets/stylesheets/components/carrousel_home/carrousel.scss
@@ -1,15 +1,43 @@
-.control-info-partners{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 
-    .books-title{
-        background-image: url("https://i.postimg.cc/2SpScbSb/lineimar-bg.png");
-        padding: 10px;
-        font-weight: bold;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position-y: -10px;
-        text-align: center;
+
+  .slide-container {
+    position: relative;
+    height: 300px;
+    width: 600px;
+    top: 60px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .card-books {
+    display: flex;
+    height: 280px;
+    width: 200px;
+    background-color: #17141d;
+    border-radius: 10px;
+    box-shadow: -1rem 0 3rem #fbdbbb;
+  /*   margin-left: -50px; */
+    transition: 0.4s ease-out;
+    position: relative;
+    left: 0px;
+
+    img{
+        width: 100%;
+        height: 100%;
     }
-}
+  }
+
+  .card-books:not(:first-child) {
+      margin-left: -50px;
+  }
+
+  .card-books:hover {
+    transform: translateY(-20px);
+    transition: 0.4s ease-out;
+  }
+
+  .card-books:hover ~ .card-books {
+    position: relative;
+    left: 50px;
+    transition: 0.4s ease-out;
+  }
