--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,8 @@
     <p class="notice"><%= notice %></p>
     <p class="alert" ><%= alert %></p>
     <%= yield %>
+    <div class="separate-footer">
+      <%= render partial: 'components/footer/footer', format: :erb %>
+    </div>
   </body>
 </html>
