--- a/app/views/components/navbar/_navbar.html.erb
+++ b/app/views/components/navbar/_navbar.html.erb
@@ -43,7 +43,7 @@
         <%= link_to 'Blog', blog_index_path, class:"nav-link"%>
       </li>
       <li class="nav-item">
-        <%= link_to 'Contact', contact_index_path, class:"nav-link"%>
+        <%= link_to 'Contact', new_contact_url, class:"nav-link"%>
       </li>
       <% if !user_signed_in? %>
         <li class=""><%= link_to '.', new_user_session_path%></li>
